# lokcalDev

./: .gitignore  LICENSE  README.md  build-mac.sh  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: pages.yml  release.yml
docs/: index.html
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: index.php  mime.types
src-tauri/src/: error.rs  lib.rs  state.rs
src-tauri/src/commands/: ai_commands.rs  database_commands.rs  log_commands.rs  mod.rs  nginx_commands.rs  php_commands.rs  phpmyadmin_commands.rs  service_commands.rs  settings_commands.rs  site_commands.rs  ssl_commands.rs  system_commands.rs
src-tauri/src/config/: app_config.rs  mod.rs  paths.rs
src-tauri/src/services/: ai_service.rs  dns_manager.rs  download_manager.rs  mariadb_manager.rs  mod.rs  nginx_config.rs  nginx_manager.rs  php_manager.rs  phpmyadmin_manager.rs  site_manager.rs  ssl_manager.rs  template_manager.rs  utils.rs
src/hooks/: useDownloadProgress.ts  useTauriCommand.ts
src/lib/: constants.ts  tauri.ts  utils.ts
src/pages/: AiPage.tsx  DashboardPage.tsx  DatabasePage.tsx  LogsPage.tsx  PhpPage.tsx  ServicesPage.tsx  SettingsPage.tsx  SitesPage.tsx  SslPage.tsx
src/stores/: aiStore.ts  appStore.ts  databaseStore.ts  logStore.ts  phpStore.ts  serviceStore.ts  settingsStore.ts  siteStore.ts  sslStore.ts
src/types/: ai.ts  config.ts  database.ts  nginx.ts  php.ts  service.ts  site.ts  ssl.ts
(+14 files in other folders)
