[package]
name = "lokcal-dev"
version = "0.1.0"
description = "LokcalDev - Local development environment manager for macOS and Windows"
authors = ["ssilistre.dev"]
license = "LicenseRef-LokcalDev"
repository = "https://github.com/ssilistre/LokcalDev"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
tauri = { version = "2.10.0", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
dirs = "6"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
flate2 = "1"
tar = "0.4"
zip = "2"
regex = "1"
toml = "0.8"
tokio-util = "0.7"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
